objects/Ownership_History__c.object
<CustomObject>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownerships History (Dealer)</relationshipLabel>
        <relationshipName>Ownerships_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownerships History (Insurance Company)</relationshipLabel>
        <relationshipName>Ownerships_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership_Finished__c</fullName>
        <label>Ownership Finished</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership_Start__c</fullName>
        <label>Ownership Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registered_Owner_Name__c</fullName>
        <formula>Registered_Owner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownerships History</relationshipLabel>
        <relationshipName>Ownerships_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <formula>Vehicle__r.Vehicle_Make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>Vehicle__r.Vehicle_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Plate__c</fullName>
        <formula>Vehicle__r.Registration_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Plate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <formula>Vehicle__r.Year_Made__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Ownerships History</relationshipLabel>
        <relationshipName>Ownerships_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ownership History</label>
    <nameField>
        <displayFormat>OH-{00000000}</displayFormat>
        <label>Ownership History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownerships History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>